--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node-cron": "^3.0.0",
     "nodemailer": "^6.6.3",
     "path": "^0.12.7",
-    "puppeteer": "^10.2.0"
+    "puppeteer": "^11.0.0"
   },
   "name": "dt-automated-reporting",
   "description": "> Scheduled email reporting for exporting Dynatrace dashboards to PDF and PNG files.",
@@ -21,7 +21,10 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "clean": "rm -rf node_modules",
+    "reinstall": "npm run clean && npm install",
+    "rebuild": "npm run clean && npm install && npm run build"
   },
   "keywords": [
     "Dynatrace",
