--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "configstore": "^5.0.0",
     "cron": "^1.8.2",
     "figlet": "^1.5.2",
+    "find-remove": "^4.0.4",
     "fs-extra": "^10.0.0",
     "inquirer": "^8.1.2",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.6.3",
     "path": "^0.12.7",
-    "puppeteer": "^11.0.0"
+    "puppeteer": "^14.0.0"
   },
   "name": "dt-automated-reporting",
   "description": "> Scheduled email reporting for exporting Dynatrace dashboards to PDF and PNG files.",
